Update and rename D&DATLA Test Environment.html to testRandomValues.html

--- a/testRandomValues.html
+++ b/testRandomValues.html
@@ -43,7 +43,7 @@ input[type=text] {
 <label for="cha">Cha</label>
 <input type="text" id="cha"><br>
 
-<script src ="D&DATLA Test Environment.js"></script>
+<script src ="testRandomValues.js"></script>
 
 
 </body>
